--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,3 +75,11 @@ jobs:
       - name: Get release version
         id: get_version
         run: echo "RELEASE_VERSION=$(cat .release-version)" >> $GITHUB_ENV
+
+      - name: Trigger component integration
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.ATALA_GITHUB_TOKEN }}
+          repository: input-output-hk/integration
+          event-type: integration
+          client-payload: '{"component": "cloud-agent", "version": "${{ env.RELEASE_VERSION }}"}'
