Change images after migrating to the Docker Hub
Signed-off-by: Yummy-Yums <eliasderby90@gmail.com>
Signed-off-by: Yurii Shynbuiev <yurii.shynbuiev@iohk.io>

--- a/infrastructure/shared/docker-compose.yml
+++ b/infrastructure/shared/docker-compose.yml
@@ -44,7 +44,7 @@ services:
   ##########################
 
   prism-node:
-    image: ghcr.io/input-output-hk/prism-node:${PRISM_NODE_VERSION}
+    image: docker.io/inputoutput/prism-node:${PRISM_NODE_VERSION}
     environment:
       NODE_PSQL_HOST: db:5432
       NODE_REFRESH_AND_SUBMIT_PERIOD:
@@ -71,7 +71,7 @@ services:
       retries: 5
 
   cloud-agent:
-    image: ghcr.io/hyperledger/identus-cloud-agent:${AGENT_VERSION}
+    image: docker.io/hyperledgeridentus/identus-cloud-agent:${AGENT_VERSION:-latest}
     environment:
       POLLUX_DB_HOST: db
       POLLUX_DB_PORT: 5432
