--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,11 +49,10 @@ jobs:
           git_tag_gpgsign: false
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ env.GITHUB_ACTOR }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -68,6 +67,7 @@ jobs:
           GIT_AUTHOR_NAME: ${{ steps.import_gpg.outputs.name }}
           GIT_COMMITTER_NAME: ${{ steps.import_gpg.outputs.name }}
           GITHUB_TOKEN: ${{ secrets.IDENTUS_CI }}
+          DOCKERHUB_ORG: ${{ vars.DOCKERHUB_ORG }}
         run: |
           npm install
           npx semantic-release
@@ -75,11 +75,3 @@ jobs:
       - name: Get release version
         id: get_version
         run: echo "RELEASE_VERSION=$(cat .release-version)" >> $GITHUB_ENV
-
-      - name: Trigger helm chart update
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.ATALA_GITHUB_TOKEN }}
-          repository: input-output-hk/atala-prism-helm-charts
-          event-type: build-chart-package
-          client-payload: '{"version": "${{ env.RELEASE_VERSION }}", "chart": "cloud-agent"}'
