--- a/infrastructure/shared/docker-compose-combined.yml
+++ b/infrastructure/shared/docker-compose-combined.yml
@@ -125,7 +125,7 @@ services:
       retries: 5
 
   cloud-agent-issuer:
-    image: ghcr.io/hyperledger/identus-cloud-agent:${AGENT_VERSION}
+    image: ghcr.io/hyperledgeridentus/identus-cloud-agent:${AGENT_VERSION}
     environment:
       POLLUX_DB_HOST: issuer-db
       POLLUX_DB_PORT: 5432
@@ -161,7 +161,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED: true
+      API_KEY_ENABLED: ${ISSUER_API_KEY_ENABLED:-true}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER: false
       API_KEY_AUTO_PROVISIONING:
     depends_on:
@@ -199,7 +199,7 @@ services:
       - swagger-ui-issuer
 
   cloud-agent-holder:
-    image: ghcr.io/hyperledger/identus-cloud-agent:${AGENT_VERSION}
+    image: ghcr.io/hyperledgeridentus/identus-cloud-agent:${AGENT_VERSION}
     environment:
       POLLUX_DB_HOST: holder-db
       POLLUX_DB_PORT: 5432
@@ -235,7 +235,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED:
+      API_KEY_ENABLED: ${HOLDER_API_KEY_ENABLED:-true}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER:
       API_KEY_AUTO_PROVISIONING:
     depends_on:
@@ -273,7 +273,7 @@ services:
       - swagger-ui-holder
 
   cloud-agent-verifier:
-    image: ghcr.io/hyperledger/identus-cloud-agent:${AGENT_VERSION}
+    image: ghcr.io/hyperledgeridentus/identus-cloud-agent:${AGENT_VERSION}
     environment:
       POLLUX_DB_HOST: verifier-db
       POLLUX_DB_PORT: 5432
@@ -309,7 +309,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED:
+      API_KEY_ENABLED: ${VERIFIER_API_KEY_ENABLED:-true}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER:
       API_KEY_AUTO_PROVISIONING:
     depends_on:
