--- a/infrastructure/shared/docker-compose-with-kafka.yml
+++ b/infrastructure/shared/docker-compose-with-kafka.yml
@@ -70,7 +70,7 @@ services:
       retries: 5
 
   cloud-agent:
-    image: ghcr.io/hyperledger/identus-cloud-agent:${AGENT_VERSION}
+    image: ghcr.io/hyperledgeridentus/identus-cloud-agent:${AGENT_VERSION}
     environment:
       POLLUX_DB_HOST: db
       POLLUX_DB_PORT: 5432
@@ -107,7 +107,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED: true
+      API_KEY_ENABLED: ${API_KEY_ENABLED:-true}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER: false
       API_KEY_AUTO_PROVISIONING:
     depends_on:
