--- a/infrastructure/shared/docker-compose.yml
+++ b/infrastructure/shared/docker-compose.yml
@@ -44,7 +44,7 @@ services:
   ##########################
 
   prism-node:
-    image: ghcr.io/input-output-hk/prism-node:${PRISM_NODE_VERSION}
+    image: docker.io/inputoutput/prism-node:${PRISM_NODE_VERSION}
     environment:
       NODE_PSQL_HOST: db:5432
       NODE_REFRESH_AND_SUBMIT_PERIOD:
@@ -71,7 +71,7 @@ services:
       retries: 5
 
   cloud-agent:
-    image: ghcr.io/hyperledger/identus-cloud-agent:${AGENT_VERSION}
+    image: docker.io/hyperledgeridentus/identus-cloud-agent:${AGENT_VERSION:-latest}
     environment:
       POLLUX_DB_HOST: db
       POLLUX_DB_PORT: 5432
@@ -107,7 +107,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED: true
+      API_KEY_ENABLED: ${API_KEY_ENABLED:-true}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER: false
       API_KEY_AUTO_PROVISIONING:
     depends_on:
