--- a/cloud-agent/client/typescript/package.json
+++ b/cloud-agent/client/typescript/package.json
@@ -37,6 +37,7 @@
     "typescript": "^4.0"
   },
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   }
 }
