fix docker compose to pass  enable API_KEY_ENABLED flag
Signed-off-by: mineme0110 <shailesh.patil@iohk.io>

--- a/infrastructure/shared/docker-compose-combined.yml
+++ b/infrastructure/shared/docker-compose-combined.yml
@@ -161,7 +161,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED: true
+      API_KEY_ENABLED: ${ISSUER_API_KEY_ENABLED:-true}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER: false
       API_KEY_AUTO_PROVISIONING:
     depends_on:
@@ -235,7 +235,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED:
+      API_KEY_ENABLED: ${HOLDER_API_KEY_ENABLED:-true}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER:
       API_KEY_AUTO_PROVISIONING:
     depends_on:
@@ -309,7 +309,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED:
+      API_KEY_ENABLED: ${VERIFIER_API_KEY_ENABLED:-true}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER:
       API_KEY_AUTO_PROVISIONING:
     depends_on:
