docs: fix broken documentation link
Signed-off-by: Pat Losoponkul <patextreme@hotmail.com>

fix: docker compose to pass  enable API_KEY_ENABLED flag (#1531)

Signed-off-by: mineme0110 <shailesh.patil@iohk.io>
Signed-off-by: Hyperledger Bot <hyperledger-bot@hyperledger.org>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Hyperledger Bot <hyperledger-bot@hyperledger.org>

build: allow to compare the OAS diff in the PR from the forked branches (#1536)

Signed-off-by: Yurii Shynbuiev <yurii.shynbuiev@iohk.io>

build: publish http client assets to NPMJS and Maven Central (#1535)

Signed-off-by: Yurii Shynbuiev <yurii.shynbuiev@iohk.io>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,9 +94,9 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
           labels: |
-            org.opencontainers.image.title=identus-cloud-agent
+            org.opencontainers.image.title=cloud-agent
             org.opencontainers.image.description=Hyperledger Identus Cloud Agent
-            org.opencontainers.image.url=https://github.com/hyperledger-identus/identus-cloud-agent
+            org.opencontainers.image.url=https://github.com/hyperledger-identus/cloud-agent
             org.opencontainers.license=Apache-2.0
             latest=${{ github.ref == 'refs/heads/main' && 'true' || 'false' }}
             snapshot=${{ github.ref != 'refs/heads/main' && 'true' || 'false' }}
