--- a/infrastructure/shared/docker-compose-mt-keycloak.yml
+++ b/infrastructure/shared/docker-compose-mt-keycloak.yml
@@ -104,7 +104,7 @@ services:
       WEBHOOK_PARALLELISM:
       ADMIN_TOKEN:
       API_KEY_SALT:
-      API_KEY_ENABLED: false
+      API_KEY_ENABLED: ${API_KEY_ENABLED:-false}
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER: false
       API_KEY_AUTO_PROVISIONING:
       KEYCLOAK_ENABLED: true
