test: change docker images in e2e tests
Signed-off-by: Yurii Shynbuiev <yurii.shynbuiev@iohk.io>

--- a/tests/integration-tests/src/test/resources/containers/agent.yml
+++ b/tests/integration-tests/src/test/resources/containers/agent.yml
@@ -22,7 +22,7 @@ services:
 
   # Open Enterprise Agent
   identus-cloud-agent:
-    image: ghcr.io/hyperledger/identus-cloud-agent:${AGENT_VERSION}
+    image: docker.io/hyperledgeridentus/identus-cloud-agent:${AGENT_VERSION}
     environment:
       API_KEY_ENABLED: true
       API_KEY_AUTHENTICATE_AS_DEFAULT_USER: false
