--- a/tests/integration-tests/src/test/resources/containers/vdr.yml
+++ b/tests/integration-tests/src/test/resources/containers/vdr.yml
@@ -16,7 +16,7 @@ services:
       retries: 5
 
   prism-node:
-    image: ghcr.io/input-output-hk/prism-node:${PRISM_NODE_VERSION}
+    image: docker.io/inputoutput/prism-node:${PRISM_NODE_VERSION}
     environment:
       NODE_PSQL_HOST: node-db:5432
       NODE_REFRESH_AND_SUBMIT_PERIOD: 1s
